grids & photos placed

--- a/index.html
+++ b/index.html
@@ -6,12 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>THE BRAND OF LUXERIOUS FASHION</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    <header class="head">
-        <div class="header__logo"><img src="./img/main_logo.png" alt=""></div>
-        <div class="header__slogan">BRAN<span>D</span></div>
+    <header class="header">
+        <div class="header__logo">
+            <img src="./img/main_logo.png" alt="">
+        </div>
+        <div class="header__slogan">
+            BRAN<span>D</span>
+        </div>
         <details class="header__drop_menu">
             <h5 class="header__drop_menu__group">WOMEN</h5>
             <li class="header__drop_menu__item"></li>
@@ -36,7 +45,7 @@
             <button type="submit" class="header__search__button"><img src="" alt=""
                     class="header__search__button__logo"></button>
         </form>
-        <a href="#" class="header__chart"><img src="" alt="" class="header__chart__logo"></a>
+        <a href="#" class="header__chart"><img src="./img/chart.png" alt="" class="header__chart__logo"></a>
         <button class="header__account-button">My Account</button>
         <nav class="header__main_menu">
             <li class="header__main_menu__item"><a href="#" class="header__main_menu__item__link">HOME</a></li>
@@ -54,68 +63,106 @@
         <h1 class="slider__slogan">THE BRAND OF LUXERIOUS FASHION</h1>
     </div>
     <div class="categories">
-
+        <article class="categories__banner__1">
+            <img src="./img/banner1.png" alt="">
+            <h4 class="categories__banner__title">
+                HOT DEAL
+            </h4>
+            <h3 class="categories__banner_category">
+                FOR MEN
+            </h3>
+        </article>
+        <article class="categories__banner__2">
+            <img src="./img/banner2.png" alt="">
+            <h4 class="categories__banner__title">
+                LUXIROUS & trendy
+            </h4>
+            <h3 class="categories__banner_category">
+                ACCESORIES
+            </h3>
+        </article>
+        <article class="categories__banner__3">
+            <img src="./img/banner3.png" alt="">
+            <h4 class="categories__banner__title">
+                30% OFFER
+            </h4>
+            <h3 class="categories__banner_category">
+                WOMEN
+            </h3>
+        </article>
+        <article class="categories__banner__4">
+            <img src="./img/banner4.png" alt="">
+            <h4 class="categories__banner__title">
+                NEW ARRIVALS
+            </h4>
+            <h3 class="categories__banner_category">
+                FOR KIDS
+            </h3>
+        </article>
     </div>
     <section class="products">
         <h2 class="products__title">Fetured Items</h2>
         <p class="products__slogan">Shop for items based on what we featured in this week</p>
-        <article class="products__product">
-            <a href="#"><img class="products__product__photo" src="" alt=""></a>
-            <a href="#" class="products__product__title">
-                <h3>MANGO PEOPLE T-SHIRT</h3>
-            </a>
-            <a href="#" class="products__product__price">$52.00</a>
-        </article>
-        <article class="products__product">
-            <a href="#"><img class="products__product__photo" src="" alt=""></a>
-            <a href="#" class="products__product__title">
-                <h3>MANGO PEOPLE T-SHIRT</h3>
-            </a>
-            <a href="#" class="products__product__price">$52.00</a>
-        </article>
-        <article class="products__product">
-            <a href="#"><img class="products__product__photo" src="" alt=""></a>
-            <a href="#" class="products__product__title">
-                <h3>MANGO PEOPLE T-SHIRT</h3>
-            </a>
-            <a href="#" class="products__product__price">$52.00</a>
-        </article>
-        <article class="products__product">
-            <a href="#"><img class="products__product__photo" src="" alt=""></a>
-            <a href="#" class="products__product__title">
-                <h3>MANGO PEOPLE T-SHIRT</h3>
-            </a>
-            <a href="#" class="products__product__price">$52.00</a>
-        </article>
-        <article class="products__product">
-            <a href="#"><img class="products__product__photo" src="" alt=""></a>
-            <a href="#" class="products__product__title">
-                <h3>MANGO PEOPLE T-SHIRT</h3>
-            </a>
-            <a href="#" class="products__product__price">$52.00</a>
-        </article>
-        <article class="products__product">
-            <a href="#"><img class="products__product__photo" src="" alt=""></a>
-            <a href="#" class="products__product__title">
-                <h3>MANGO PEOPLE T-SHIRT</h3>
-            </a>
-            <a href="#" class="products__product__price">$52.00</a>
-        </article>
-        <article class="products__product">
-            <a href="#"><img class="products__product__photo" src="" alt=""></a>
-            <a href="#" class="products__product__title">
-                <h3>MANGO PEOPLE T-SHIRT</h3>
-            </a>
-            <a href="#" class="products__product__price">$52.00</a>
-        </article>
-        <article class="products__product">
-            <a href="#"><img class="products__product__photo" src="" alt=""></a>
-            <a href="#" class="products__product__title">
-                <h3>MANGO PEOPLE T-SHIRT</h3>
-            </a>
-            <a href="#" class="products__product__price">$52.00</a>
-        </article>
+        <div class="products__container">
+            <article class="products__product">
+                <a href="#"><img class="products__product__photo" src="./img/product1.png" alt=""></a>
+                <a href="#" class="products__product__title">
+                    <h3>MANGO PEOPLE T-SHIRT</h3>
+                </a>
+                <a href="#" class="products__product__price">$52.00</a>
+            </article>
+            <article class="products__product">
+                <a href="#"><img class="products__product__photo" src="./img/product2.png" alt=""></a>
+                <a href="#" class="products__product__title">
+                    <h3>MANGO PEOPLE T-SHIRT</h3>
+                </a>
+                <a href="#" class="products__product__price">$52.00</a>
+            </article>
+            <article class="products__product">
+                <a href="#"><img class="products__product__photo" src="./img/product3.png" alt=""></a>
+                <a href="#" class="products__product__title">
+                    <h3>MANGO PEOPLE T-SHIRT</h3>
+                </a>
+                <a href="#" class="products__product__price">$52.00</a>
+            </article>
+            <article class="products__product">
+                <a href="#"><img class="products__product__photo" src="./img/product4.png" alt=""></a>
+                <a href="#" class="products__product__title">
+                    <h3>MANGO PEOPLE T-SHIRT</h3>
+                </a>
+                <a href="#" class="products__product__price">$52.00</a>
+            </article>
+            <article class="products__product">
+                <a href="#"><img class="products__product__photo" src="./img/product5.png" alt=""></a>
+                <a href="#" class="products__product__title">
+                    <h3>MANGO PEOPLE T-SHIRT</h3>
+                </a>
+                <a href="#" class="products__product__price">$52.00</a>
+            </article>
+            <article class="products__product">
+                <a href="#"><img class="products__product__photo" src="./img/product6.png" alt=""></a>
+                <a href="#" class="products__product__title">
+                    <h3>MANGO PEOPLE T-SHIRT</h3>
+                </a>
+                <a href="#" class="products__product__price">$52.00</a>
+            </article>
+            <article class="products__product">
+                <a href="#"><img class="products__product__photo" src="./img/product7.png" alt=""></a>
+                <a href="#" class="products__product__title">
+                    <h3>MANGO PEOPLE T-SHIRT</h3>
+                </a>
+                <a href="#" class="products__product__price">$52.00</a>
+            </article>
+            <article class="products__product">
+                <a href="#"><img class="products__product__photo" src="./img/product8.png" alt=""></a>
+                <a href="#" class="products__product__title">
+                    <h3>MANGO PEOPLE T-SHIRT</h3>
+                </a>
+                <a href="#" class="products__product__price">$52.00</a>
+            </article>
+        </div>
         <button class="products__catalogue">Browse All Products</button>
+
     </section>
     <div class="feature">
         <div class="feature__banner">
