header content filled

--- a/index.html
+++ b/index.html
@@ -15,52 +15,68 @@
 
 <body>
     <header class="header">
-        <div class="header__logo">
-            <img src="./img/main_logo.png" alt="">
+        <div class="header__top">
+            <div class="header__top__left_block">
+                <div class="header__logo">
+                    <img src="./img/main_logo.png" alt="">
+                </div>
+                <div class="header__slogan">
+                    BRAN<span>D</span>
+                </div>
+                <details class="header__drop_menu">
+                    <h5 class="header__drop_menu__group">WOMEN</h5>
+                    <li class="header__drop_menu__item"></li>
+                    <li class="header__drop_menu__item"></li>
+                    <li class="header__drop_menu__item"></li>
+                    <li class="header__drop_menu__item"></li>
+                    <li class="header__drop_menu__item"></li>
+                    <li class="header__drop_menu__item"></li>
+                    <li class="header__drop_menu__item"></li>
+                    <li class="header__drop_menu__item"></li>
+                    <li class="header__drop_menu__item"></li>
+                    <h5 class="header__drop_menu__group">MEN</h5>
+                    <li class="header__drop_menu__item"></li>
+                    <li class="header__drop_menu__item"></li>
+                    <li class="header__drop_menu__item"></li>
+                    <li class="header__drop_menu__item"></li>
+                    <li class="header__drop_menu__item"></li>
+                    <li class="header__drop_menu__item"></li>
+                </details>
+                <form action="" class="header__search">
+                    <input type="text" class="header__search__box" placeholder="Search for item...">
+                    <button type="submit" class="header__search__button"><img src="./img/search_logo.png" alt=""
+                            class="header__search__button__logo"></button>
+                </form>
+            </div>
+            <div class="header__top__right_block">
+                <a href="#" class="header__chart">
+                    <img src="./img/chart.png" alt="" class="header__chart__logo">
+                </a>
+                <button class="header__account-button">
+                    My Account
+                </button>
+            </div>
         </div>
-        <div class="header__slogan">
-            BRAN<span>D</span>
-        </div>
-        <details class="header__drop_menu">
-            <h5 class="header__drop_menu__group">WOMEN</h5>
-            <li class="header__drop_menu__item"></li>
-            <li class="header__drop_menu__item"></li>
-            <li class="header__drop_menu__item"></li>
-            <li class="header__drop_menu__item"></li>
-            <li class="header__drop_menu__item"></li>
-            <li class="header__drop_menu__item"></li>
-            <li class="header__drop_menu__item"></li>
-            <li class="header__drop_menu__item"></li>
-            <li class="header__drop_menu__item"></li>
-            <h5 class="header__drop_menu__group">MEN</h5>
-            <li class="header__drop_menu__item"></li>
-            <li class="header__drop_menu__item"></li>
-            <li class="header__drop_menu__item"></li>
-            <li class="header__drop_menu__item"></li>
-            <li class="header__drop_menu__item"></li>
-            <li class="header__drop_menu__item"></li>
-        </details>
-        <form action="" class="header__search">
-            <input type="text" class="header__search__box" placeholder="Search for item...">
-            <button type="submit" class="header__search__button"><img src="" alt=""
-                    class="header__search__button__logo"></button>
-        </form>
-        <a href="#" class="header__chart"><img src="./img/chart.png" alt="" class="header__chart__logo"></a>
-        <button class="header__account-button">My Account</button>
         <nav class="header__main_menu">
-            <li class="header__main_menu__item"><a href="#" class="header__main_menu__item__link">HOME</a></li>
-            <li class="header__main_menu__item"><a href="#" class="header__main_menu__item__link">MAN</a></li>
-            <li class="header__main_menu__item"><a href="#" class="header__main_menu__item__link">WOMEN</a></li>
-            <li class="header__main_menu__item"><a href="#" class="header__main_menu__item__link">KIDS</a></li>
-            <li class="header__main_menu__item"><a href="#" class="header__main_menu__item__link">ACCOSERIESE</a></li>
-            <li class="header__main_menu__item"><a href="#" class="header__main_menu__item__link">FEATURED</a></li>
-            <li class="header__main_menu__item"><a href="#" class="header__main_menu__item__link">HOT DEALS</a></li>
+            <ul class="header__main_menu__item"><a href="#" class="header__main_menu__item__link">HOME</a></ul>
+            <ul class="header__main_menu__item"><a href="#" class="header__main_menu__item__link">MAN</a></ul>
+            <ul class="header__main_menu__item"><a href="#" class="header__main_menu__item__link">WOMEN</a></ul>
+            <ul class="header__main_menu__item"><a href="#" class="header__main_menu__item__link">KIDS</a></ul>
+            <ul class="header__main_menu__item"><a href="#" class="header__main_menu__item__link">ACCOSERIESE</a></ul>
+            <ul class="header__main_menu__item"><a href="#" class="header__main_menu__item__link">FEATURED</a></ul>
+            <ul class="header__main_menu__item"><a href="#" class="header__main_menu__item__link">HOT DEALS</a></ul>
         </nav>
     </header>
     <div class="slider">
-        <img src="" alt="" class="slider__photo">
-        <img src="" alt="" class="slider__logo">
-        <h1 class="slider__slogan">THE BRAND OF LUXERIOUS FASHION</h1>
+        <div class="slider__title">
+            <img src="./img/slider_logo.png" alt="" class="slider__logo">
+            <h1 class="slider__slogan">
+                THE BRAND
+            </h1>
+            <h2 class="slider__subslogan">
+                OF LUXERIOUS <span>FASHION</span>
+            </h2>
+        </div>
     </div>
     <div class="categories">
         <article class="categories__banner__1">
