header refactoring completed, cart drop-menu made

--- a/single_page.html
+++ b/single_page.html
@@ -57,6 +57,33 @@
                 <a href="shopping_cart.html" class="header__chart">
                     <img src="./img/chart.png" alt="" class="header__chart__logo">
                 </a>
+                <div class="header__chart-content">
+                    <div class="header__chart-content__product">
+                        <a href="single_page.html"><img class="header__chart-content__product-photo" src="/img/cart_product_1.png" alt=""></a>
+                        <article class="header__chart-content__product-description">
+                            <h4 class="header__chart-content__product-name">Rebox Zane</h4>
+                            <img src="./img/cart_product_stars.png" alt="" class="header__chart-content__product-stars">
+                            <p class="header__chart-content__product-sum">1  x   $250</p>
+                        </article>
+                        <img src="./img/cart_product_del.png" alt="" class="header__chart-content__product-del">
+                    </div>
+                    <div class="header__chart-content__product">
+                        <a href="single_page.html"><img class="header__chart-content__product-photo" src="/img/cart_product_2.png" alt=""></a>
+                        <article class="header__chart-content__product-description">
+                            <h4 class="header__chart-content__product-name">Rebox Zane</h4>
+                            <img src="./img/cart_product_stars.png" alt="" class="header__chart-content__product-stars">
+                            <p class="header__chart-content__product-sum">1  x   $250</p>
+                        </article>
+                        <img src="./img/cart_product_del.png" alt="" class="header__chart-content__product-del">
+                    </div>
+                    <div class="header__chart-content__product-total">
+                        <p class="header__chart-content__product-totals">TOTAL</p>
+                        <p class="header__chart-content__product-totals">$500.00</p>
+                    </div>
+                    <a href="checkout.html" class="header__chart-content__product-button">CHECKOUT</a>
+                    <a href="shopping_cart.html" class="header__chart-content__product-button">GO TO CART</a>
+
+                </div>
                 <button class="header__account-button">
                     My Account
                     <img src="./img/arrow_down.png" alt="" class="header__account-button_arrow-down">
