--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -339,8 +339,89 @@
         </ul>
     </section>
     <section class="cart">
-        
-
+        <form action="submit" class="cart__products">
+            <article class="cart__headers">
+                <h4 class="cart__header">Product Details</h4>
+                <h4 class="cart__header"></h4>
+                <h4 class="cart__header cart__header_central">unite Price</h4>
+                <h4 class="cart__header cart__header_central">Quantity</h4>
+                <h4 class="cart__header cart__header_central">shipping</h4>
+                <h4 class="cart__header cart__header_central">Subtotal</h4>
+                <h4 class="cart__header cart__header_central">ACTION</h4>
+            </article>
+            <article class="cart__product">
+                <img src="./img/cart_product1.png" alt="" class="cart__product-photo">
+                <div class="cart__product-description">
+                    <h class="cart__product-name">Mango  People  T-shirt</h>
+                    <p class="cart__product-spec">
+                        Color:   Red <br>
+                        Size:   Xll
+                    </p>
+                </div>
+                <p class="cart__product-parametr">$150</p>
+                <input class="cart__product-parametr cart__product-parametr_input" type="number" name="" id="" min="0" value="2">
+                <p class="cart__product-parametr">FREE</p>
+                <p class="cart__product-parametr">$300</p>
+                <img src="./img/cart_product_del.png" alt="" class="cart__product-parametr">
+            </article>
+            <article class="cart__product">
+                <img src="./img/cart_product2.png" alt="" class="cart__product-photo">
+                <div class="cart__product-description">
+                    <h class="cart__product-name">Mango  People  T-shirt</h>
+                    <p class="cart__product-spec">
+                        Color:   Red <br>
+                        Size:   Xll
+                    </p>
+                </div>
+                <p class="cart__product-parametr">$150</p>
+                <input class="cart__product-parametr cart__product-parametr_input" type="number" name="" id="" min="0" value="2">
+                <p class="cart__product-parametr">FREE</p>
+                <p class="cart__product-parametr">$300</p>
+                <img src="./img/cart_product_del.png" alt="" class="cart__product-parametr">
+            </article>
+            <article class="cart__product">
+                <img src="./img/cart_product3.png" alt="" class="cart__product-photo">
+                <div class="cart__product-description">
+                    <h class="cart__product-name">Mango  People  T-shirt</h>
+                    <p class="cart__product-spec">
+                        Color:   Red <br>
+                        Size:   Xll
+                    </p>
+                </div>
+                <p class="cart__product-parametr">$150</p>
+                <input class="cart__product-parametr cart__product-parametr_input" type="number" name="" id="" min="0" value="2">
+                <p class="cart__product-parametr">FREE</p>
+                <p class="cart__product-parametr">$300</p>
+                <img src="./img/cart_product_del.png" alt="" class="cart__product-parametr">
+            </article>
+            <div class="cart__product-buttons">
+                <button class="cart__product-button" type="reset">CLEAR SHOPPING CART</button>
+                <button class="cart__product-button" type="submit">CONTINUE SHOPPING</button>
+            </div>
+        </form>    
+        <form action="submit" class="cart__shipping">
+                <label for="cart__shipping-country" class="cart__shipping-country">Shipping Adress</label>
+                <select name="" id="cart__shipping-country" class="cart__shipping-input">
+                    <option value="Belgium">Belgium</option>
+                    <option value="Belgium">Russia</option>
+                    <option value="Belgium">German</option>
+                    <option value="Belgium">Italy</option>
+                </select>
+            <input class="cart__shipping-input" type="text" name="" id="" placeholder="State">
+            <input class="cart__shipping-input" type="text" name="" id="" placeholder="Postcode/Zip">
+            <button class="cart__shipping-button" type="submit">get a quote</button>
+        </form>
+        <form action="submit" class="cart__discount cart__shipping">
+            <h4 class="cart__shipping-country">coupon  discount</h4>
+            <p class="cart__discount-description">Enter your coupon code if you have one</p>
+            <input class="cart__shipping-input" type="text" name="" id="" placeholder="State">
+            <button class="cart__shipping-button" type="submit">apply coupon</button>
+        </form>
+        <div class="cart__checkout">
+            <h5 class="cart__checkout-subtotal">Sub total &nbsp&nbsp $900</h5>
+            <h4 class="cart__checkout-total">GRAND TOTAL &nbsp&nbsp<span class="cart__checkout-total-span">$900</span></h4>
+            <div class="cart__checkout-link-box"><a class="cart__checkout-link" href="checkout.html" >proceed to checkout</a></div>            
+        </div>
     </section>
     <div class="subscriber">
         <div class="subscriber__teaser">
